FIx text overflow formatting

--- a/public/styles.css
+++ b/public/styles.css
@@ -96,7 +96,6 @@ header .profile:hover {
 .profileSection, .messageSection {
     display: flex;
     flex-direction: column;
-    padding: 20px;
     width: 150px;
 }
 
@@ -105,11 +104,13 @@ header .profile:hover {
     gap: 10px;
     background-color: var(--secondary);
     border-radius: 20px 0 0 20px;
+    padding: 30px;
+    text-align: center;
 }
 
 .messageSection {
     position: relative;
-    padding: 20px 30px 20px;
+    padding: 30px;
     flex: 1;
 }
 
@@ -175,16 +176,31 @@ header .profile:hover {
 
 .post .username {
     color: var(--primary);
+    margin-bottom: 6px;
 }
 
 .post .status {
     font-weight: bold;
+    margin-top: 6px;
+}
+
+.postTitle {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: calc(100% - 100px);
 }
 
 .post .timestamp {
     font-size: 14px;
     color: var(--textSecondary);
     margin: 6px 0 20px;
+}
+
+.post .postText {
+    overflow-wrap: break-word;
+    word-break: break-word;
+    white-space: normal;
 }
 
 .post form {
